<resources>
    <string name="app_name">TimeC@rd</string>

    <string name="menu_item_config">Config</string>
    <string name="btn_register">登録</string>
    <string name="btn_cancel">キャンセル</string>

    <string name="dialog_tab_site">現場</string>
    <string name="dialog_tab_office">自社</string>

    <string name="config_notice">通知設定</string>
    <string name="config_sub_notice">設定した時刻に通知を行います</string>
    <string name="config_starttime">始業時間設定</string>
    <string name="config_sub_starttime">始業の時間を設定します</string>
    <string name="config_endtime">終業時間設定</string>
    <string name="config_sub_endtime">終業の時間を設定します</string>
    <string name="config_default_time">00：00</string>

    <string name="header_year">年</string>
    <string name="header_month">月</string>
    <string name="header_day">日</string>
    <string name="header_week">曜日</string>
    <string name="header_site">現場稼働</string>
    <string name="header_office">自社稼働</string>
    <string name="footer_text">footer</string>
    <string name="footer_total_label">合計</string>

    <string name="btn_now">なう</string>
    <string name="dialog_starttime">始業時間</string>
    <string name="dialog_endtime">終業時間</string>

    <string name="scroll_list_item_day">%02d</string>
    <string name="scroll_list_item_week">(%s)</string>
    <string name="scroll_list_item_separator">-</string>

    <string name="appbar_scrolling_view_behavior"></string>

</resources>
